creusot/tests/should_fail/prusti/blocked_lifetime/curr_lifetime.stderr
error[creusot]: 'curr region must not be blocked
 --> curr_lifetime.rs:4:1
  |
4 | #[ensures(true)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ensures` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

